--- a/index.html
+++ b/index.html
@@ -22,65 +22,65 @@
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">PROFIL</a>
 				<div class="dropdown-content">
-					<a href="#">SEJARAH</a>
-					<a href="#">STRUKTUR ORGANISASI</a>
-					<a href="#">VISI MISI & TUJUAN</a>
+					<a href="page/p_sejarah.html">SEJARAH</a>
+					<a href="page/p_struktur.html">STRUKTUR ORGANISASI</a>
+					<a href="page/p_visimisi.html">VISI MISI & TUJUAN</a>
 				</div>
 			</li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">FAKULTAS</a>
 				<div class="dropdown-content">
-					<a href="#">PROGRAM PASCA SARJANA</a>
-					<a href="#">FAKULTAS EKONOMI DAN BISNIS</a>
-					<a href="#">FAKULTAS HUKUM</a>
-					<a href="#">FAKULTAS KEGURUAN & ILMU PENDIDIKAN</a>
-					<a href="#">FAKULTAS ILMU KOMPUTER</a>
-					<a href="#">FAKULTAS ILMU SOSIAL DAN ILMU POLITIK</a>
-					<a href="#">FAKULTAS SAINS DAN TEKNOLOGI</a>
-					<a href="#">FAKULTAS ILMU KESEHATAN</a>
+					<a href="page/f_pascasarjana.html">PROGRAM PASCA SARJANA</a>
+					<a href="page/f_ekonomi.html">FAKULTAS EKONOMI DAN BISNIS</a>
+					<a href="page/f_hukum.html">FAKULTAS HUKUM</a>
+					<a href="page/f_keguruan.html">FAKULTAS KEGURUAN & ILMU PENDIDIKAN</a>
+					<a href="page/f_ilkom.html">FAKULTAS ILMU KOMPUTER</a>
+					<a href="page/f_sosialpolitik.html">FAKULTAS ILMU SOSIAL DAN ILMU POLITIK</a>
+					<a href="page/f_sainsteknologi.html">FAKULTAS SAINS DAN TEKNOLOGI</a>
+					<a href="page/f_kesehatan.html">FAKULTAS ILMU KESEHATAN</a>
 				</div>
 			</li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">LEMBAGA</a>
 				<div class="dropdown-content">
-					<a href="#">SPMI</a>
-					<a href="#">LP2M</a>
-					<a href="#">BIDANG HUMAS</a>
-					<a href="#">LKBH UNIBA</a>
-					<a href="#">LEMBAGA SERTIFIKASI PROFESI</a>
-					<a href="#">INKUBATOR BISNIS DAN KEWIRAUSAHAAN</a>
-					<a href="#">PUSAT BAHASA</a>
-					<a href="#">TAX CENTRE</a>
-					<a href="#">LABORATORIUM</a>
-					<a href="#">PERPUSTAKAAN</a>
-					<a href="#">PUSAT STUDI DOSEN DAN BIDANG ILMU</a>
-					<a href="#">BIDANG KERJASAMA</a>
-					<a href="#">PUSAT DATA DAN PELAPORAN</a>
+					<a href="page/l_spmi.html">SPMI</a>
+					<a href="page/l_lp2m.html">LP2M</a>
+					<a href="page/l_bidanghumas.html">BIDANG HUMAS</a>
+					<a href="page/l_lkbh.html">LKBH UNIBA</a>
+					<a href="page/l_sertifikasi.html">LEMBAGA SERTIFIKASI PROFESI</a>
+					<a href="page/l_inkubator.html">INKUBATOR BISNIS DAN KEWIRAUSAHAAN</a>
+					<a href="page/l_pusatbahasa.html">PUSAT BAHASA</a>
+					<a href="page/l_taxcentre.html">TAX CENTRE</a>
+					<a href="page/l_laboratorium.html">LABORATORIUM</a>
+					<a href="page/l_perpustakaan.html">PERPUSTAKAAN</a>
+					<a href="page/l_pusatstudi.html">PUSAT STUDI DOSEN DAN BIDANG ILMU</a>
+					<a href="page/l_bidangkerjasama.html">BIDANG KERJASAMA</a>
+					<a href="page/l_pusatdata.html">PUSAT DATA DAN PELAPORAN</a>
 				</div>
 			</li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">ORGAMA</a>
 				<div class="dropdown-content">
-					<a href="#">DPM</a>
-					<a href="#">BEM</a>
-					<a href="#">LABAIK</a>
-					<a href="#">IKOMA</a>
-					<a href="#">KSR</a>
-					<a href="#">PSM</a>
-					<a href="#">MAPELBA</a>
-					<a href="#">LISBU</a>
-					<a href="#">EXTAMA</a>
-					<a href="#">RESIMEN MAHASISWA UNIBA</a>
+					<a href="page/o_dpm.html">DPM</a>
+					<a href="page/o_bem.html">BEM</a>
+					<a href="page/o_labaik.html">LABAIK</a>
+					<a href="page/o_ikoma.html">IKOMA</a>
+					<a href="page/o_ksr.html">KSR</a>
+					<a href="page/o_psm.html">PSM</a>
+					<a href="page/o_mapelba.html">MAPELBA</a>
+					<a href="page/o_lisbu.html">LISBU</a>
+					<a href="page/o_extama.html">EXTAMA</a>
+					<a href="page/o_resimen.html">RESIMEN MAHASISWA UNIBA</a>
 				</div>
 			</li>
-			<li><a href="#">SARPAS</a></li>
+			<li><a href="page/s_sarpas.html">SARPAS</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">DOK KINERJA</a>
 				<div class="dropdown-content">
-					<a href="#">RENCANA STRATEGIS</a>
-					<a href="#">PERJANJIAN KINERJA</a>
-					<a href="#">LAPORAN KINERJA</a>
-					<a href="#">INDIKATOR KERJA UTAMA (IKU)</a>
+					<a href="page/d_rencana.html">RENCANA STRATEGIS</a>
+					<a href="page/d_perjanjian.html">PERJANJIAN KINERJA</a>
+					<a href="page/d_laporan.html">LAPORAN KINERJA</a>
+					<a href="page/d_indikator.html">INDIKATOR KERJA UTAMA (IKU)</a>
 				</div>
 			</li>
 		</ul>
@@ -96,8 +96,8 @@
 			<div class="imgslide fade">
 				<img src="asset/img/2.jpg" alt="">
 			</div>
-			<a class="prev" onclick="nextslide(-1)">&#10094;</a>
-			<a class="next" onclick="nextslide(1)">&#10095;</a>
+			<a class="prev" onclick="nextslide(1)">&#10094;</a>
+			<a class="next" onclick="nextslide(-1)">&#10095;</a>
 		</div>
 	</div>
 
