--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 	<nav>
 		<div class="logo">
-			<a href="#"><img src="asset/img/icon.png" alt="logo">UNIVERSITAS BINA BANGSA</a>
+			<a href="index.html"><img src="asset/img/icon.png" alt="logo">UNIVERSITAS BINA BANGSA</a>
 		</div>
 		<div class="toggle">
 			<a href="#"><ion-icon name="menu-outline"></ion-icon></a>
 		</div>
 		<ul class="menu">
-			<li><a href="#">HOME</a></li>
+			<li><a href="index.html">HOME</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">PROFIL</a>
 				<div class="dropdown-content">
